plugins {
    id 'java'
    id 'maven-publish'
}

group 'pl.edu.pw.ddm.platform'
version '0.0.1-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_1_8

repositories {
    mavenLocal()
    mavenCentral()
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}

dependencies {
    compileOnly 'pl.edu.pw.ddm.platform:model:0.0.1-SNAPSHOT'

    testImplementation 'junit:junit:4.12'
    testImplementation 'pl.edu.pw.ddm.platform:model:0.0.1-SNAPSHOT'
}

test {
    testLogging {
        showStandardStreams = true
    }
}
